--- a/index.html
+++ b/index.html
@@ -2,30 +2,38 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        </title>Gatos Persa</title>
+        <link href="edicion.css" rel="stylesheet"/>
+        <title>Gatos Persa</title>
     </head>
         <body>
-            <h2>Todo sobre gatos raza "persa"</h2>
-                <p>Si deseas tener un gatito persa o simplemente averiguar de ellos, has llegado a la página indicada</p>
+            <h2 id="titulo">Todo sobre gatos raza "persa"</h2>
+                <p id="nose">Si deseas tener un gatito persa o simplemente averiguar de ellos, has llegado a la página indicada.</p>
+                <header id="nav">
+                    <nav>
+                        <ul>
+                            <li><a target="_blank" href="index.html">Inicio</a></li>
+                            <li><a target="_blank" href="https://bestforpets.cl/tienda/perros?gclid=Cj0KCQjwyN-DBhCDARIsAFOELTkcCyvGqIS44PtHOz0QthTBZvZNXXfRV-NDZYKB2AOoBa8cJisMqUQaAgHAEALw_wcB">Alimentación</a></li>
+                            <li><a target="_blank" href="http://www.medicinafelina.cl/">Salud y cuidado</a></li>
+                            <li><a target="_blank" href="https://es-la.facebook.com/gatykeycattery/">¿Dónde adoptar uno?</a></li>
+                        </ul>
+                    </nav>
+                </header>
+                <p id="contactanos">¿Cómo contactarnos?</p>
+                <p id="contacto">- ¡Contáctanos a nuestro mail : gatitospersa@gmail.com!</p>
+                <p id="instagram">- Siguenos en instagram: @gatitospersa.cl</p>
+                <p id="telefono">- Llama al: +56956137817</p>
+                <div id="div1">
+                    <img src="gatopersa1.jpg"width="300"/>
+                </div>
+                <div id="div2">
+                    <img src="gatopersa2.jpg"width="200"/>
+                </div>
+                <div id="div3">
+                    <img src="gatopersa3.jpg"width="300"/>
+                </div>
+                <div id="div4">
+                    <img src="gatopersa4.jpg"width="q00"/>
+                </div>
         </body>
-    <nav>
-        <ul>
-            <li><a target="_blank" href="index.html">Inicio</a></li>
-            <li><a target="_blank" href="https://bestforpets.cl/tienda/perros?gclid=Cj0KCQjwyN-DBhCDARIsAFOELTkcCyvGqIS44PtHOz0QthTBZvZNXXfRV-NDZYKB2AOoBa8cJisMqUQaAgHAEALw_wcB">Alimentación</a></li>
-            <li><a target="_blank" href="http://www.medicinafelina.cl/">Salud y cuidado</a></li>
-            <li><a target="_blank" href="https://es-la.facebook.com/gatykeycattery/">¿Donde adoptar uno?</a></li>
-        </ul>
-    </nav>
-    <div>
-        <img src="gatopersa1.jpg"width="300"/>
-    </div>
-    <div>
-        <img src="gatopersa2.jpg"width="300"/>
-    </div>
-    <div>
-        <img src="gatopersa3.jpg"width="300"/>
-    </div>
-    <div>
-        <img src="gatopersa4.jpg"width="300"/>
-    </div>
+    
 </html>
