--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
         <meta charset="utf-8" />
         <link href="edicion.css" rel="stylesheet"/>
         <title>Gatos Persa</title>
+        <script type="text/javascript" src="jquery-3.6.0.js"></script>
+        <script type="text/javascript" src="java.js"></script>
     </head>
         <body>
             <h2 id="titulo">Todo sobre gatos raza "persa"</h2>
+            <button id="boton3">PRESIONA AQUI</button>
                 <p id="nose">Si deseas tener un gatito persa o simplemente averiguar de ellos, has llegado a la página indicada.</p>
                 <header id="nav">
                     <nav>
@@ -17,11 +20,14 @@
                             <li><a target="_blank" href="https://es-la.facebook.com/gatykeycattery/">¿Dónde adoptar uno?</a></li>
                         </ul>
                     </nav>
-                </header>
+                </header> 
                 <p id="contactanos">¿Cómo contactarnos?</p>
                 <p id="contacto">- ¡Contáctanos a nuestro mail : gatitospersa@gmail.com!</p>
                 <p id="instagram">- Siguenos en instagram: @gatitospersa.cl</p>
                 <p id="telefono">- Llama al: +56956137817</p>
+                <button id="boton1">ESCONDER</button> 
+                <button id="boton2">APARECER</button> 
+
                 <div id="div1">
                     <img src="gatopersa1.jpg"width="300"/>
                 </div>
@@ -33,6 +39,9 @@
                 </div>
                 <div id="div4">
                     <img src="gatopersa4.jpg"width="q00"/>
+                </div>
+                <div id="div5">
+                    Requieren de mucho cuidado
                 </div>
         </body>
     
